@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
 	<string id="30000">Kvalita</string>
-	<string id="30002">Nepodařilo se přistoupit na server!</string>
-	<string id="30005">Verze videa nenalezeny!</string>
-	<string id="30006">Další</string>
+	<string id="30001">Nepodařilo se přistoupit na server!</string>
+	<string id="30002">Verze videa nenalezeny!</string>
+	<string id="30003">Další</string>
+    <string id="30004">Nejnovější</string>
 </strings>
