@@ -1,4 +1,7 @@
-﻿2019-09-11 [2.0.7]
+﻿2019-09-12 [2.1.2]
+ * Latest video section
+ * Bump version
+2019-09-11 [2.0.7]
  * Fixed plugin for changes in aktualne web
  * Show pubdate in the infopanel
  * Improved video loading
